...
            let instance = child.clone()
            deepCopyGeometryAndMaterials(in: instance)
            container.addChildNode(instance)
        }

        let visualNode = SCNNode()
        visualNode.name = "tableVisual"
        visualNode.addChildNode(container)

        let cueStickNode = extractCueStick(from: visualNode)

        let removedBalls = detachBallNodes(from: visualNode)

...
